# devman_fish_shop

./: .gitignore  README.md  main.py  pyproject.toml  utils.py
config/: settings.py
src/api/: elasticpath.py
src/bot/: handles.py  keyboards.py  loader.py
src/tg/bot/: handles.py  jobs.py  keyboards.py  loader.py  utils.py
